# G2M

./: .gitignore  README.md  app.py  build.spec  components.d.ts  dev.py  env.d.ts  index.html  main.py  package.json  pnpm-lock.yaml  test-GameList.json  tsconfig.app.json  version_info.txt  vite.config.ts
ModJsonBuild/: main.py
assets/ui/: index.html
core/: add_game.py  config_manager.py  constants.py  delete_game.py  get_game_info.py  get_games.py  open_game.py  update_game.py
core/game/: add.py  delete.py  get_info.py  get_list.py  start.py  update.py
core/mod/: detector.py
docs/: 404.html  CNAME  hashmap.json  index.html
docs/api/: backend.html  examples.html  frontend.html  overview.html  types.html
docs/assets/: app.B3wDG0bl.js  (+18 more)
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  typed-router.d.ts
src-tauri/: .taurignore  Cargo.toml  g2m.config.json  tauri.conf.json
src-tauri/G2M/Config/: GameList.json
src-tauri/G2M/Module/CLEO.III_v2.1.1/CLEO/CLEO_PLUGINS/: III.ClipboardControl.cleo  III.MemoryModule.cleo
src-tauri/G2M/Module/CLEO.VC_v2.1.1/CLEO/CLEO_PLUGINS/: VC.ClipboardControl.cleo  VC.IniFiles.cleo
src-tauri/capabilities/: default.json
src-tauri/src/: game_manager.rs  lib.rs  main.rs
src-tauri/src/app/: info.rs  version.rs
src-tauri/src/game/: core.rs  detection.rs  download.rs  index.rs  prerequisites.rs  types.rs  utils.rs
src-tauri/src/mod/: config.rs  core.rs  mod.rs  utils.rs
src-tauri/src/utils/: log.rs
vue/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
website/: package.json  pnpm-lock.yaml
(+114 files in other folders)
